--- a/frontend-cemos/src/app/modules/app8-direito/app8-direito-flashcards/app8-direito-flashcards.html
+++ b/frontend-cemos/src/app/modules/app8-direito/app8-direito-flashcards/app8-direito-flashcards.html
@@ -1,7 +1,8 @@
 <section class="flashcards-section">
     <app-flash-cards 
       [bibliografiaIds]="bibliografiaIds"
-      [bibliografiaPath]="bibliografiaPath">
+      [bibliografiaPath]="bibliografiaPath"
+      [title]="title">
     </app-flash-cards>
   </section>
 
