--- a/frontend-cemos/src/app/modules/app1-intendencia/app1-intendencia-bibliografia/2-ema-400/ema-400.html
+++ b/frontend-cemos/src/app/modules/app1-intendencia/app1-intendencia-bibliografia/2-ema-400/ema-400.html
@@ -1,1 +1,9 @@
-<p>ema-400 works!</p>
+<div>
+    <app-livro-individual
+      [contentPath]="contentPath"
+      [fileNames]="fileNames"
+      [backRoute]="backRoute"
+      [backLabel]="backLabel">
+    </app-livro-individual>
+  </div>
+    
