--- a/frontend-cemos/src/app/pages/home/home-landing/home-landing.component.html
+++ b/frontend-cemos/src/app/pages/home/home-landing/home-landing.component.html
@@ -87,8 +87,7 @@
       </mat-card-content>
     </mat-card>  
   </div>
-
-  <!-- <div class="calendar-section"> -->
+<!-- 
     <mat-card class="calendar-card">
       <mat-card-header>
         <mat-icon class="calendar-icon">calendar_month</mat-icon>
@@ -110,7 +109,6 @@
               </tr>
             </thead>
             <tbody>
-              <!-- Passada 1 -->
               <tr class="passada-1">
                 <td class="passada-cell" rowspan="9">1</td>
                 <td>História</td>
@@ -157,8 +155,7 @@
                 <td>27/01/2026</td>
                 <td>11/02/2026</td>
               </tr>
-
-              <!-- Passada 2 -->
+              
               <tr class="passada-2">
                 <td class="passada-cell" rowspan="9">2</td>
                 <td>História</td>
@@ -206,7 +203,6 @@
                 <td>23/06/2026</td>
               </tr>
 
-              <!-- Passada 3 -->
               <tr class="passada-3">
                 <td class="passada-cell" rowspan="9">3</td>
                 <td>História</td>
@@ -272,7 +268,7 @@
           </div>
         </div>
       </mat-card-content>
-    </mat-card>
+    </mat-card> -->
   </div>
 </div>
 
